#Copyright or © or Copr. CNRS, (November 16, 2004-2008)
#
#This software is a computer program whose purpose is to provide classes
#for phylogenetic data analysis.
#
#This software is governed by the CeCILL  license under French law and
#abiding by the rules of distribution of free software.  You can  use, 
#modify and/ or redistribute the software under the terms of the CeCILL
#license as circulated by CEA, CNRS and INRIA at the following URL
#"http://www.cecill.info". 
#
#As a counterpart to the access to the source code and  rights to copy,
#modify and redistribute granted by the license, users are provided only
#with a limited warranty  and the software's author,  the holder of the
#economic rights,  and the successive licensors  have only  limited
#liability. 
#
#In this respect, the user's attention is drawn to the risks associated
#with loading,  using,  modifying and/or developing or reproducing the
#software by the user in light of its specific status of free software,
#that may mean  that it is complicated to manipulate,  and  that  also
#therefore means  that it is reserved for developers  and  experienced
#professionals having in-depth computer knowledge. Users are therefore
#encouraged to load and test the software's suitability as regards their
#requirements in conditions enabling the security of their systems and/or 
#data to be ensured and,  more generally, to use and operate it in the 
#same conditions as regards security. 
#
#The fact that you are presently reading this means that you have had
#knowledge of the CeCILL license and that you accept its terms.

H_FILES = \
AbstractSubstitutionModel.h\
AbstractTreeLikelihood.h\
AbstractDiscreteRatesAcrossSitesTreeLikelihood.h\
AbstractHomogeneousTreeLikelihood.h\
AbstractNonHomogeneousTreeLikelihood.h\
AbstractAgglomerativeDistanceMethod.h\
AncestralStateReconstruction.h\
MarginalAncestralStateReconstruction.h\
AgglomerativeDistanceMethod.h\
PhylogeneticsApplicationTools.h\
DistanceEstimation.h\
DSO78.h\
DSO78F.h\
PseudoNewtonOptimizer.h\
HKY85.h\
TreeLikelihood.h\
DRTreeLikelihood.h\
HomogeneousTreeLikelihood.h\
RHomogeneousTreeLikelihood.h\
DRHomogeneousTreeLikelihood.h\
NNIHomogeneousTreeLikelihood.h\
NonHomogeneousTreeLikelihood.h\
RNonHomogeneousTreeLikelihood.h\
DRNonHomogeneousTreeLikelihood.h\
ClockTreeLikelihood.h\
RHomogeneousClockTreeLikelihood.h\
DRTreeLikelihoodTools.h\
IODistanceMatrix.h\
iodistance\
IOTree.h\
iotree\
JCnuc.h\
JCprot.h\
JCprotF.h\
JTT92.h\
JTT92F.h\
K80.h\
models\
MutationProcess.h\
Newick.h\
NucleotideSubstitutionModel.h\
NeighborJoining.h\
NNISearchable.h\
OptimizationTools.h\
PatternTools.h\
PGMA.h\
PhylipDistanceMatrixFormat.h\
ProteinSubstitutionModel.h\
ProteinSubstitutionModelWithFrequencies.h\
SequenceSimulator.h\
SiteSimulator.h\
DetailedSiteSimulator.h\
NonHomogeneousSequenceSimulator.h\
HomogeneousSequenceSimulator.h\
SubstitutionModel.h\
FrequenciesSet.h\
T92.h\
TN93.h\
TreeExceptions.h\
Node.h\
NodeTemplate.h\
Tree.h\
TreeTemplate.h\
TreeLikelihoodData.h\
AbstractTreeLikelihoodData.h\
DRASRTreeLikelihoodData.h\
DRASDRTreeLikelihoodData.h\
TreeTools.h\
TreeTemplateTools.h\
DiscreteRatesAcrossSitesTreeLikelihood.h\
RASTools.h\
TreeParsimonyScore.h\
TreeParsimonyData.h\
AbstractTreeParsimonyScore.h\
AbstractTreeParsimonyData.h\
DRTreeParsimonyScore.h\
DRTreeParsimonyData.h\
SequenceSimulationTools.h\
UserProteinSubstitutionModel.h\
UserProteinSubstitutionModelF.h\
TopologySearch.h\
NNITopologySearch.h\
GTR.h\
trees\
SitePatterns.h\
SubstitutionMapping.h\
ProbabilisticSubstitutionMapping.h\
SubstitutionCount.h\
AnalyticalSubstitutionCount.h\
SimpleSubstitutionCount.h\
IndexToCount.h\
SubstitutionMappingTools.h\
BioNJ.h\
SubstitutionModelFactory.h\
RateDistributionFactory.h\
IOTreeFactory.h\
IODistanceMatrixFactory.h\
F84.h\
MarkovModulatedSubstitutionModel.h\
G2001.h\
TS98.h\
BipartitionList.h\
BipartitionTools.h\
SubstitutionModelSet.h\
SubstitutionModelSetTools.h\
L95.h\
RE08.h


CPP_FILES = \
AbstractSubstitutionModel.cpp\
AbstractTreeLikelihood.cpp\
AbstractDiscreteRatesAcrossSitesTreeLikelihood.cpp\
AbstractHomogeneousTreeLikelihood.cpp\
AbstractNonHomogeneousTreeLikelihood.cpp\
AbstractAgglomerativeDistanceMethod.cpp\
PhylogeneticsApplicationTools.cpp\
DistanceEstimation.cpp\
DSO78.cpp\
DSO78F.cpp\
PseudoNewtonOptimizer.cpp\
HKY85.cpp\
RHomogeneousTreeLikelihood.cpp\
RNonHomogeneousTreeLikelihood.cpp\
DRNonHomogeneousTreeLikelihood.cpp\
DRASRTreeLikelihoodData.cpp\
DRHomogeneousTreeLikelihood.cpp\
NNIHomogeneousTreeLikelihood.cpp\
RHomogeneousClockTreeLikelihood.cpp\
DRASDRTreeLikelihoodData.cpp\
DRTreeLikelihoodTools.cpp\
JCnuc.cpp\
JCprot.cpp\
JCprotF.cpp\
JTT92.cpp\
JTT92F.cpp\
K80.cpp\
MarginalAncestralStateReconstruction.cpp\
MutationProcess.cpp\
NeighborJoining.cpp\
Newick.cpp\
Node.cpp\
OptimizationTools.cpp\
PatternTools.cpp\
PGMA.cpp\
PhylipDistanceMatrixFormat.cpp\
NonHomogeneousSequenceSimulator.cpp\
SubstitutionModel.cpp\
T92.cpp\
TN93.cpp\
TreeExceptions.cpp\
TreeTools.cpp\
TreeTemplateTools.cpp\
RASTools.cpp\
AbstractTreeParsimonyScore.cpp\
DRTreeParsimonyScore.cpp\
DRTreeParsimonyData.cpp\
SequenceSimulationTools.cpp\
UserProteinSubstitutionModel.cpp\
UserProteinSubstitutionModelF.cpp\
NNITopologySearch.cpp\
GTR.cpp\
SitePatterns.cpp\
ProbabilisticSubstitutionMapping.cpp\
AnalyticalSubstitutionCount.cpp\
SubstitutionMappingTools.cpp\
BioNJ.cpp\
SubstitutionModelFactory.cpp\
RateDistributionFactory.cpp\
IOTreeFactory.cpp\
IODistanceMatrixFactory.cpp\
F84.cpp\
MarkovModulatedSubstitutionModel.cpp\
BipartitionList.cpp\
BipartitionTools.cpp\
SubstitutionModelSet.cpp\
SubstitutionModelSetTools.cpp\
FrequenciesSet.cpp\
L95.cpp\
RE08.cpp

CPP_EXTRA = \
__DSO78FrequenciesCode\
__DSO78ExchangeabilityCode\
__JTT92FrequenciesCode\
__JTT92ExchangeabilityCode

lib_LTLIBRARIES = libbpp-phyl.la
libbpp_phyl_la_SOURCES = $(H_FILES) $(CPP_FILES)
EXTRA_libbpp_phyl_la_SOURCES = $(CPP_EXTRA)
# CURRENT:REVISION:AGE => file.so.(C-A).A.R
# current: The most recent interface number that this library implements.
# revision: The implementation number of the current interface.
# age: The difference between the newest and oldest interfaces that this library implements.
# In other words, the library implements all the interface numbers in the range from number current - age to current.
libbpp_phyl_la_LDFLAGS = -version-info 8:0:2

library_includedir=$(includedir)/Phyl
library_include_HEADERS = $(H_FILES)

